--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,24 +5,32 @@ on:
     - cron: "0 */3 * * *"   # every 3 hours (UTC)
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 concurrency:
-  group: fpl-data
-  cancel-in-progress: true
+  group: fpl-build
+  cancel-in-progress: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0            # allow rebase
 
-      # Node 20 includes fetch() natively; we don't need npm install
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+
+      - name: Install deps (if any)
+        run: |
+          if [ -f package-lock.json ] || [ -f pnpm-lock.yaml ] || [ -f yarn.lock ]; then
+            npm ci || npm install
+          else
+            echo "No lockfile; skipping install"
+          fi
 
       - name: Build data.json
         run: node scripts/build.mjs
@@ -32,9 +40,8 @@ jobs:
           if [[ -n "$(git status --porcelain)" ]]; then
             git config user.name "github-actions[bot]"
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add -A
+            git add data.json
             git commit -m "Update data.json"
-            # rebase onto latest main to avoid non-fast-forward errors
             git fetch origin main
             git pull --rebase origin main
             git push origin HEAD:main
