--- a/.github/workflows/fpl-update.yaml
+++ b/.github/workflows/fpl-update.yaml
@@ -8,6 +8,10 @@ on:
 permissions:
   contents: write
 
+concurrency:
+  group: fpl-update
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -40,16 +44,26 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          if [[ -n "$(git status --porcelain)" ]]; then
-            git config user.name "github-actions[bot]"
-            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add data.json
-            if git diff --cached --quiet; then
-              echo "No diff to commit."
-              exit 0
-            fi
-            git commit -m "Update data.json"
-            git push origin HEAD:main
-          else
-            echo "No changes detected."
+          # Commit only if data.json actually changed
+          if git diff --quiet -- data.json; then
+            echo "No changes in data.json; nothing to commit."
+            exit 0
           fi
+
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+          git add data.json
+          git commit -m "chore: Update data.json [skip ci]"
+
+          # First attempt a normal push
+          if git push origin HEAD:main; then
+            echo "Push succeeded."
+            exit 0
+          fi
+
+          # If the remote moved while we were running, rebase and retry once
+          echo "Push rejected; rebasing onto latest origin/main and retrying…"
+          git fetch origin
+          git pull --rebase origin main || true
+          git push origin HEAD:main
